* Added Persian localization by HYIPEDU Team
* Added Basque localization by Ibon Idoiaga Basaras from http://librezale.org
* Added Armenian localization by Yavruhrat, Marat Yavrumyan, Ruben Tarumian
* Updated French localization by Mathias Monnerville
* Current reading progress is saved in books db
* Help item in the main menu (opens F.A.Q. page on the site)

===== 1.8.2 (Jun 13, 2013) =====
* Editable highlighting styles
* Bookmarks with no highlighting
* Two-column view in horizontal mode is enabled by default for 7" devices
* New color picker dialog (AmbilWarna library http://code.google.com/p/android-color-picker/ is used)
* Updated Spanish localization (by Diego Bernardi, sponsored by Panacea Supplies)
* Updated Czech localization (by Marek Pavelka)
* Updated Dutch localization (by Frank Fesevur)
* Bitknights dictionaries support (by Norbert Kenderesi)
* Support for new Paragon Software dictionaries (by Paragon Software)
* Fixed decimal point separator in preferences (idea by Dennis Sheil)
* Fixed book info saving for BookInfoActivity/EditBookInfoActivity (service mechanism is used instead of Activity.setResult())

===== 1.8.1 (May 06, 2013) =====
* Fixed ConcurrentModificationException in ZLTextView

===== 1.8 (May 06, 2013) =====

* 2 column text view (in horizontal mode, optional, enabled by default on devices with diagonal > 7")
* text highlighting (show bookmarks in color)
* Fixed ePub books scanning
* Fixed series index representation: 10 instead 1E+1

===== 1.7.9 (Apr 23, 2013) =====
* Fixed Ukrainian hyphenations
* Fixed missing paragraph before new section issue (in some book formats)
* Fixed library/bookmarks start
* Georgian in language list in book info dialog
* Fixed interface language swithcing (change language immediately in menu, library, etc.)
* Added "add/remove book to/from favorites" items in BookInfoActivity menu
* Smaller font size in list activities
* Read/unread book marks

===== 1.7.8 (Mar 24, 2013) =====