@@ -27,6 +27,8 @@ import android.view.*;
 
 import org.geometerplus.zlibrary.ui.android.R;
 
+import org.geometerplus.android.util.ViewUtil;
+
 public class CancelActivity extends ListActivity {
 	static final String LIST_SIZE = "listSize";
 	static final String ITEM_TITLE = "title";
@@ -65,8 +67,8 @@ public class CancelActivity extends ListActivity {
 			final View view = convertView != null
 				? convertView
 				: LayoutInflater.from(parent.getContext()).inflate(R.layout.cancel_item, parent, false);
-			final TextView titleView = (TextView)view.findViewById(R.id.cancel_item_title);
-			final TextView summaryView = (TextView)view.findViewById(R.id.cancel_item_summary);
+			final TextView titleView = ViewUtil.findTextView(view, R.id.cancel_item_title);
+			final TextView summaryView = ViewUtil.findTextView(view, R.id.cancel_item_summary);
 			final String title = myIntent.getStringExtra(ITEM_TITLE + position);
 			final String summary = myIntent.getStringExtra(ITEM_SUMMARY + position);
 			titleView.setText(title);
