@@ -15,6 +15,7 @@
 * Updated French localization by Mathias Monnerville
 * Current reading progress is saved in books db
 * Help item in the main menu (opens F.A.Q. page on the site)
+* List views scrolling speed-up (https://github.com/geometer/FBReaderJ/issues/148)
 
 ===== 1.8.2 (Jun 13, 2013) =====
 * Editable highlighting styles
